# clanopedia

./: dfx.json
src/clanopedia_backend/: Cargo.toml  clanopedia_backend.did
src/clanopedia_backend/.cargo/: config.toml
src/clanopedia_backend/src/: blueband_client.rs  blueband_interface.rs  cycles.rs  governance.rs  lib.rs  random.rs  storage.rs  token_interface.rs  types.rs
src/clanopedia_backend/src/extractor/: file_extractor.rs  mod.rs  types.rs  url_extractor.rs
src/clanopedia_backend/src/utils/: mod.rs  random.rs
src/clanopedia_frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/clanopedia_frontend/src/: App.tsx  index.css  main.jsx  routes.tsx
src/clanopedia_frontend/src/components/atoms/: button.tsx  card.tsx  modal.tsx  toaster.tsx
src/clanopedia_frontend/src/components/molecules/: CollectionCard.tsx  dashboard-card.tsx  navbar.tsx
src/clanopedia_frontend/src/components/molecules/modals/: CreateCollectionModal.tsx  LoginModal.tsx
src/clanopedia_frontend/src/components/organisms/: Collections.tsx  DocumentAdder.tsx  DocumentReader.tsx
src/clanopedia_frontend/src/lib/: utils.ts
src/clanopedia_frontend/src/pages/: CollectionPage.tsx  CollectionSettingsPage.tsx  GovernancePage.tsx  HomePage.tsx  ProposalsPage.tsx
src/clanopedia_frontend/src/providers/: theme.tsx  toast.tsx  useAuth.tsx
src/clanopedia_frontend/src/store/: queryStore.ts
src/clanopedia_frontend/src/stores/: collectionStore.ts
