[package]
name = "clanopedia_backend"
version = "0.1.0"
edition = "2021"
description = "Clanopedia Backend - Community Governance for Vector Databases"

[lib]
name = "clanopedia_backend"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.0"
ic-stable-structures = "0.6.8"
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icrc-ledger-types = "0.1.8"
num-traits = "0.2"
getrandom = { version = "0.2", features = ["custom"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1

